<resources>
    <string name="app_name">PPK</string>

    <!--  Create password / login  -->
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_password">Create password</string>
    <string name="enable_biometrics">Enable biometrics</string>
    <string name="provide_password">Please provide a password with minimum length of 4 characters</string>
    <string name="password_dont_match">Passwords don\'t match</string>
    <string name="field_empty">Field is empty</string>

    <!-- Login -->
    <string name="wrong_password">Wrong password</string>
    <string name="login">Login</string>

    <!--  Dashboard  -->
    <string name="money_with_currency">%s zł</string>

    <!-- Add payment  -->
    <string name="add_payment_provide_correct_value">Please provide correct value</string>
    <string name="add_payment_unit_value">Unit value %s</string>

    <!--  Toolbars  -->
    <string name="password_fragment_toolbar_titile">Password</string>
    <string name="login_fragment_toolbar_titile">Login</string>
    <string name="splash_fragment_toolbar_titile">PPK</string>
    <string name="dashboard_fragment_toolbar_titile">PPK</string>
    <string name="funds_fragment_toolbar_titile">Choose fund</string>
    <string name="fundDetails_fragment_toolbar_titile">Fund details</string>
    <string name="addPayment_fragment_toolbar_titile">Add payment</string>
    <string name="settings_fragment_toolbar_titile">Settings</string>
    <string name="import_fragment_toolbar_titile">Import data</string>

    <string name="login_fingerprint_fail">Authentication failed. Please provide password</string>
    <string name="login_fingerprint_title">Log in using biometry</string>
    <string name="login_fingeprint_subtitle">Log in using your biometric credential</string>
    <string name="login_fingerprint_unavailable">Fingerprint is unavailable</string>
    <string name="login_fingeprint_none_enrolled">You need to add fingerprint in settings</string>
    <string name="login_fingerprint_password">Use account password</string>
    <string name="login_fingeprint_error">Fingerprint error: %s</string>

    <string name="dashboard_inflation_hint">With inflation</string>
    <string name="dashboard_country_payment">Country payments</string>
    <string name="dashboard_employer_payment">Employer payments</string>
    <string name="dashboard_own_payment">Own payments</string>
    <string name="dashboard_payments">Total payments</string>

    <string name="fund_detail_select">Select</string>
    <string name="fund_detail_cancel">Cancel</string>
    <string name="import_import">Import</string>
    <string name="import_summary">Summary</string>
    <string name="import_own_payments">Own payments</string>
    <string name="import_employer_payments">Employer payments</string>
    <string name="import_country_payments">Country payments</string>
    <string name="import_choose">Choose</string>

    <string name="login_login">Please login</string>
    <string name="retry">Retry</string>
    <string name="could_not_load_data">Could not load data</string>
    <string name="dashboard_amount">Total amount</string>

    <string name="settings_export_hint">Create an back-up</string>
    <string name="settings_export_button">Export data</string>

    <string name="history_individual">Individual</string>
    <string name="history_company">Company</string>
    <string name="history_country">Country</string>
    <string name="item_history_price">Price</string>
    <string name="item_history_source">Source</string>
    <string name="item_history_date">Date</string>
    <string name="item_history_amount">Amount</string>
    <string name="main_tabs_dashboard">Dashboard</string>
    <string name="main_tabs_history">Historia</string>
</resources>