<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/item_history_amount_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_history_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_history_amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/item_history_amount_hint"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="100" />

    <TextView
        android:id="@+id/item_history_price_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_history_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_history_amount_hint" />

    <TextView
        android:id="@+id/item_history_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/item_history_price_hint"
        app:layout_constraintTop_toBottomOf="@id/item_history_amount_hint"
        tools:text="100 zł" />


    <TextView
        android:id="@+id/item_history_source_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/item_history_source"
        app:layout_constraintEnd_toStartOf="@id/item_history_source_value"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_history_source_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="INDIVIDUAL" />

    <TextView
        android:id="@+id/item_history_date_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/item_history_date"
        app:layout_constraintEnd_toStartOf="@id/item_history_date_value"
        app:layout_constraintTop_toBottomOf="@id/item_history_source_hint" />

    <TextView
        android:id="@+id/item_history_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_history_source_value"
        tools:text="10-01-2020" />

</androidx.constraintlayout.widget.ConstraintLayout>