<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.DashboardFragment">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_fab_own"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:text="@string/dashboard_own_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_fab_country"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:text="@string/dashboard_country_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/fund_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Fundusz TFI PZU 55" />

            <TextView
                android:id="@+id/balance_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Stan środków"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fund_name" />

            <TextView
                android:id="@+id/balance_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/balance_hint"
                tools:text="5 550,34 zł" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="country_payments_hint, employer_payments_hint, inflation_hint, own_payments_hint, payments_hint" />

            <TextView
                android:id="@+id/payments_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dashboard_payments"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toBottomOf="@+id/payments_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/payments_amount" />

            <TextView
                android:id="@+id/payments_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/balance_amount"
                tools:text="1 100,00 zł" />

            <TextView
                android:id="@+id/own_payments_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dashboard_own_payment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toBottomOf="@+id/own_payments_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/own_payments_amount" />

            <TextView
                android:id="@+id/own_payments_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/payments_hint"
                tools:text="1 100,00 zł" />


            <TextView
                android:id="@+id/employer_payments_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dashboard_employer_payment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toBottomOf="@+id/employer_payments_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/employer_payments_amount" />

            <TextView
                android:id="@+id/employer_payments_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/own_payments_amount"
                tools:text="1 100,00 zł" />


            <TextView
                android:id="@+id/country_payments_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dashboard_country_payment"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toBottomOf="@+id/country_payments_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/country_payments_amount" />

            <TextView
                android:id="@+id/country_payments_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/employer_payments_amount"
                tools:text="1 100,00 zł" />


            <TextView
                android:id="@+id/inflation_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dashboard_inflation_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toBottomOf="@+id/inflation_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inflation_amount" />

            <TextView
                android:id="@+id/inflation_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/country_payments_amount"
                tools:text="1 100,00 zł" />


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@id/inflation_amount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:visibility="gone">

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toTopOf="@id/errorHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/errorHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/could_not_load_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retryButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>